--- a/project.html
+++ b/project.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel="stylesheet" href="styles.css">
  </head>
  <body>
     <h1>Olá</h1>
+    <p>Test git</p>
     
  </body>
  </html>   
